# mopidy-tubeify

./: README.rst  browse.apple.html  requirements.txt  setup.cfg  tox.ini
Mopidy_Tubeify.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
mopidy_tubeify/: __init__.py  allmusic.py  amazon.py  amrap.py  apple.py  backend.py  bestlivealbums.py  data.py  discogs.py  ext.conf  farout.py  fmspins.py  kcrw.py  kexp.py  lastfm.py  musicreviewworld.py  nme.py  npr.py  paste.py  pitchfork.py  pitchfork.py.old  rateyourmusic.py  rollingstone.py  rollingstone500songs.py  serviceclient.py  spotify.py  tidal.py  tripler.py  web.py  whathifi.py  yt_matcher.py
tests/: test_extension.py
