[metadata]
name = Mopidy-Tubeify
version = 0.1.0
url = https://github.com/natumbri/mopidy-tubeify
author = Nik Tumbri
author_email = natumbri@gmail.com
license = Apache License, Version 2.0
license_files = LICENSE
description = Mopidy extension for playing streaming service playlists using mopidy-youtube
long_description = file: README.rst
classifiers =
    Environment :: No Input/Output (Daemon)
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Multimedia :: Sound/Audio :: Players


[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >= 3.7
install_requires =
    beautifulsoup4 >= 4.11.1
    cachetools >= 4.2.2
    Mopidy >= 3.3.0
    Mopidy_YouTube >= 3.6
    Pykka >= 2.0.3
    rapidfuzz >= 2.0.11
    requests >= 2.25.1
    setuptools >= 60.0.0
    Unidecode >= 1.3.4
    ytmusicapi >= 0.22.0


[options.extras_require]
lint =
    black
    check-manifest
    flake8
    flake8-black
    flake8-bugbear
    flake8-isort
    isort
test =
    pytest
    pytest-cov
dev =
    %(lint)s
    %(test)s
    tox


[options.packages.find]
exclude =
    tests
    tests.*


[options.entry_points]
mopidy.ext =
    tubeify = mopidy_tubeify:Extension


[flake8]
application-import-names = mopidy_tubeify, tests
max-line-length = 80
exclude = .git, .tox, build
select =
    # Regular flake8 rules
    C, E, F, W
    # flake8-bugbear rules
    B
    # B950: line too long (soft speed limit)
    B950
    # flake8-isort
    I
    # pep8-naming rules
    N
ignore =
    # E203: whitespace before ':' (not PEP8 compliant)
    E203
    # E501: line too long (replaced by B950)
    E501
    # W503: line break before binary operator (not PEP8 compliant)
    W503
    # B305: .next() is not a thing on Python 3 (used by playback controller)
    B305
